k8s/overlays/dev/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-dev-prefix
spec:
  stripPrefix:
    prefixes:
      - /dev
