k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: candidate-api
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: dev-strip-dev-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /dev
            pathType: Prefix
            backend:
              service:
                name: candidate-api
                port:
                  number: 80
